[gd_scene load_steps=5 format=3 uid="uid://pmpxlqjfxvdd"]

[ext_resource type="Script" path="res://main.gd" id="1_1kem2"]
[ext_resource type="PackedScene" uid="uid://pjm3hla4lm5q" path="res://player.tscn" id="1_h875p"]
[ext_resource type="PackedScene" uid="uid://cqvvnqgjp5xme" path="res://mob.tscn" id="2_f1ilr"]

[sub_resource type="Curve2D" id="Curve2D_nrh3f"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 8, 0, 0, 0, 0, 480, 8, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 728, 0, 0, 0, 0, 0, 8)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_1kem2")
mob_scene = ExtResource("2_f1ilr")

[node name="Player" parent="." instance=ExtResource("1_h875p")]
visible = false
position = Vector2(0, -2)

[node name="scoreTimer" type="Timer" parent="."]

[node name="mobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="startTimer" type="Timer" parent="."]
one_shot = true

[node name="startPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="mobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_nrh3f")

[node name="mobSpawnLocation" type="PathFollow2D" parent="mobPath"]
position = Vector2(0, 8)

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="scoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="mobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="startTimer" to="." method="_on_start_timer_timeout"]
